SERVER-132469 Fix async-signal-unsafe issue in WASM store-limiter OOM path (#59624)

GitOrigin-RevId: 72bf6e24b34fa78e36e20c5425e1b1f5f6cd293f